# bedmock

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  setup.sh
.github/workflows/: ci.yml
bedmock/: __init__.py  capabilities.py  client.py  config.py  exceptions.py  facade.py  logging_utils.py  routing.py  version.py
bedmock/canonical/: __init__.py  content.py  tools.py  usage.py
bedmock/cli/: doctor.py  main.py
bedmock/codecs/: amazon_nova.py  amazon_titan_text.py  anthropic_legacy.py  anthropic_messages.py  base.py  generic_prompt.py  meta_llama.py  mistral.py  registry.py  utils.py
bedmock/operations/: base.py  converse.py  converse_stream.py  count_tokens.py  invoke_model.py  invoke_model_stream.py
bedmock/plugins/: loader.py
bedmock/provider_profiles/: gemini.json  groq.json  loader.py  openai.json  openrouter.json  schema.json
bedmock/transports/: __init__.py  base.py  http_errors.py  openai_chat_completions.py  registry.py  retry.py  sse.py
bedrock_bridge/: __init__.py  client.py  config.py  exceptions.py  facade.py  logging_utils.py  routing.py  session.py  version.py
bedrock_bridge/canonical/: __init__.py  content.py  request.py  response.py  streaming.py  tools.py  usage.py
bedrock_bridge/cli/: doctor.py  main.py
bedrock_bridge/codecs/: __init__.py  amazon_nova.py  amazon_titan_text.py  anthropic_legacy.py  anthropic_messages.py  base.py  detection.py  generic_prompt.py  meta_llama.py  mistral.py  registry.py  utils.py
bedrock_bridge/operations/: __init__.py  base.py  converse.py  converse_stream.py  count_tokens.py  invoke_model.py  invoke_model_stream.py  registry.py
bedrock_bridge/plugins/: __init__.py
bedrock_bridge/provider_profiles/: __init__.py  gemini.json  loader.py  openai.json  openrouter.json
bedrock_bridge/transports/: __init__.py  base.py  http_errors.py  openai_chat_completions.py  registry.py  retry.py  sse.py
docs/: adding-a-codec.md  adding-a-provider.md  architecture.md  compatibility.md  configuration.md  migrating-from-boto3-bedrock.md
docs/architecture-decisions/: 0001-canonical-model.md  0002-provider-profile-format.md  0003-botocore-streaming-body.md  0004-error-mapping.md  0005-runtime-dependencies.md  0006-openai-sdk-decision.md  0007-project-license.md  0008-operation-codecs.md  0009-token-counting.md
docs/plans/: 2026-07-09-codex-approved-plan-bedmock-provider-boundary-hardening.md
docs/retrospective/: 2026-07-09.md
examples/: basic_invoke_model.py  bedmock.json  converse.py  converse_stream.py  count_tokens.py  multimodal.py  streaming_invoke_model.py  structured_output.py  tools.py
examples/provider-configs/: gemini.sh  groq.sh  openai.sh  openrouter.sh
learning-notes/topics/: provider-boundary-hardening.md
tests/: conftest.py
tests/contract/: test_drop_in_contract.py
tests/reference/: anthropic_messages_basic.py  anthropic_messages_multimodal.py  anthropic_messages_stop_sequences.py  anthropic_messages_system_prompt.py  anthropic_messages_tool_use.py  converse_basic.py  converse_streaming.py  count_tokens_basic.py  invoke_model_streaming.py  test_reference_scenarios.py
tests/regression/: test_exercises_patterns.py
tests/unit/: test_bedmock_alias.py  test_cli.py  test_codecs.py  test_config_routing_profiles.py  test_facade_drop_in.py  test_public_facade.py  test_sse.py  test_transport_openai.py  test_transport_registry.py
